[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/materials/grid.tres" type="Material" id=1]
[ext_resource path="res://src/Levels/Box.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Levels/PlayerTroopCam.gd" type="Script" id=4]
[ext_resource path="res://src/Levels/Level.gd" type="Script" id=5]
[ext_resource path="res://PlayerShip.tscn" type="PackedScene" id=6]
[ext_resource path="res://ShipCamera.gd" type="Script" id=7]
[ext_resource path="res://PilotManager.gd" type="Script" id=8]
[ext_resource path="res://src/Ships/LandingArea/LandingArea.tscn" type="PackedScene" id=9]
[ext_resource path="res://SupportShip.tscn" type="PackedScene" id=10]
[ext_resource path="res://CapitalShip.tscn" type="PackedScene" id=11]
[ext_resource path="res://AttackShip.tscn" type="PackedScene" id=12]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 400, 400 )

[sub_resource type="ConcavePolygonShape" id=2]
data = PoolVector3Array( 200, 0, 200, -200, 0, 200, 200, 0, -200, -200, 0, 200, -200, 0, -200, 200, 0, -200 )

[node name="Level" type="Spatial"]
script = ExtResource( 5 )

[node name="Map" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Map"]
mesh = SubResource( 1 )
material/0 = ExtResource( 1 )

[node name="StaticBody" type="StaticBody" parent="Map/MeshInstance"]

[node name="CollisionShape" type="CollisionShape" parent="Map/MeshInstance/StaticBody"]
shape = SubResource( 2 )

[node name="LandingArea" parent="Map" instance=ExtResource( 9 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 23.2917, 0 )

[node name="CollisionShape" parent="Map/LandingArea" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.68073, 0 )

[node name="Box" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 0.509342, 0.860564, 0, -0.860564, 0.509342, 0, 11.3708, 0 )

[node name="Box2" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 0.509342, 0.860564, 0, -0.860564, 0.509342, 0, 11.3708, -13.4142 )

[node name="Box3" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 0.509342, 0.860564, 0, -0.860564, 0.509342, 0, 16.1443, -9.14729 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.509342, 0.860564, 0, -0.860564, 0.509342, 0, 18.9153, 0 )

[node name="PlayerTroopCam" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.9301, 12.6019 )
current = true
far = 5000.0
script = ExtResource( 4 )

[node name="PlayerShipCam" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.9301, 12.6019 )
far = 10000.0
script = ExtResource( 7 )

[node name="PlayerShip" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 0.999998, 0.00211145, 0, -0.00211145, 0.999998, -9.19466, 5.8129, 95.1892 )
mode = 1

[node name="PlayerShip2" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 0.999998, 0.00211145, 0, -0.00211145, 0.999998, -38.4176, 5.8129, 95.1892 )
mode = 1

[node name="PilotManagers" type="Node" parent="."]

[node name="PlayerMan" type="Node" parent="PilotManagers"]
script = ExtResource( 8 )

[node name="BigShips" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2000, 0 )

[node name="CapitalShipRed" parent="BigShips" instance=ExtResource( 11 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -3000, 0, 0 )

[node name="CapitalShipBlue" parent="BigShips" instance=ExtResource( 11 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 2996, 0, 0 )
blue_team = true

[node name="SuportShip" parent="BigShips" instance=ExtResource( 10 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -2000, 0, 715.452 )
blue_team = false

[node name="SuportShip2" parent="BigShips" instance=ExtResource( 10 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -2000, 0, -790.848 )
blue_team = false

[node name="AttackShip2" parent="BigShips" instance=ExtResource( 12 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -2696.04, 431.208, -726.323 )
blue_team = false

[node name="SuportShip3" parent="BigShips" instance=ExtResource( 10 )]
transform = Transform( 1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 2000, 0, -643.399 )
blue_team = true

[node name="SuportShip4" parent="BigShips" instance=ExtResource( 10 )]
transform = Transform( 1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 2000, 0, 787.622 )
blue_team = true

[node name="AttackShip3" parent="BigShips" instance=ExtResource( 12 )]
transform = Transform( 1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 2748.31, -300.505, -963.107 )
blue_team = true

[editable path="Map/LandingArea"]
